RPP: Move EntryStyles,EntryName into Utils
Necessary to avoid circular dependencies

Bug:370436840
Change-Id: Iaba0389055620e633d1b610dae5dded269dbba57
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5967893
Auto-Submit: Paul Irish <paulirish@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Connor Clark <cjamcl@chromium.org>

--- a/front_end/models/trace/handlers/BUILD.gn
+++ b/front_end/models/trace/handlers/BUILD.gn
@@ -98,7 +98,7 @@ ts_library("unittests") {
     "../../../generated",
     "../../../models/trace:bundle",
     "../../../panels/timeline:bundle",
-    "../../../panels/timeline/components:bundle",
+    "../../../panels/timeline/utils:bundle",
     "../../../testing",
   ]
 }
