--- a/front_end/panels/timeline/utils/BUILD.gn
+++ b/front_end/panels/timeline/utils/BUILD.gn
@@ -7,6 +7,7 @@ import("../../../../scripts/build/ninja/devtools_module.gni")
 
 devtools_module("utils") {
   sources = [
+    "AICallTree.ts",
     "EntryName.ts",
     "EntryStyles.ts",
     "Helpers.ts",
@@ -23,6 +24,7 @@ devtools_module("utils") {
     "../../../generated",
     "../../../models/bindings:bundle",
     "../../../models/source_map_scopes:bundle",
+    "../../../models/timeline_model:bundle",
     "../../../models/trace:bundle",
     "../../../models/workspace:bundle",
     "../../../ui/legacy:bundle",
@@ -37,6 +39,7 @@ devtools_entrypoint("bundle") {
   visibility = [
     ":*",
     "..:*",
+    "../../freestyler/*",
     "../../network/*",
     "../components:*",
     "../components/insights:*",
@@ -50,6 +53,7 @@ ts_library("unittests") {
   testonly = true
 
   sources = [
+    "AICallTree.test.ts",
     "EntryName.test.ts",
     "Helpers.test.ts",
     "IgnoreList.test.ts",
