--- a/build_overrides/build.gni
+++ b/build_overrides/build.gni
@@ -10,3 +10,15 @@ build_with_chromium = false
 ignore_elf32_limitations = true
 
 use_system_xcode = true
+
+# Enables assertions on safety checks in libc++.
+#
+# This should be set to true whenever building with Chrome's custom libc++ in
+# order to guard against undefined behavior. However, the asserts added by
+# hardening libc++ may introduce some performance overhead, so this is
+# configurable to simplify A/B tests, and to allow performance-sensitive
+# projects embedding Chrome (e.g. ANGLE) to disable libc++ hardening.
+#
+# Note that setting this to true only has an effect when also building with
+# `use_custom_libcxx = true`.
+enable_safe_libcxx = true
