Allow legacy data grid instantiation from lit-html template
Similar to the split widget changes: https://crrev.com/c/5898679

Bug: 301364727
Change-Id: I9fadad2d9288f1fd90c25b0f9f6db1b9663ae990
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5960859
Reviewed-by: Philip Pfaffe <pfaffe@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Joshua Thomas <masnoble@chromium.org>

--- a/front_end/BUILD.gn
+++ b/front_end/BUILD.gn
@@ -238,6 +238,7 @@ group("unittests") {
     "ui/legacy:copy_stylesheets_for_server",
     "ui/legacy:unittests",
     "ui/legacy/components/color_picker:unittests",
+    "ui/legacy/components/data_grid:unittests",
     "ui/legacy/components/inline_editor:unittests",
     "ui/legacy/components/object_ui:unittests",
     "ui/legacy/components/perf_ui:unittests",
