--- a/front_end/ui/legacy/components/data_grid/BUILD.gn
+++ b/front_end/ui/legacy/components/data_grid/BUILD.gn
@@ -53,3 +53,14 @@ devtools_entrypoint("bundle") {
 
   visibility += devtools_ui_legacy_visibility
 }
+
+ts_library("unittests") {
+  testonly = true
+
+  sources = [ "DataGrid.test.ts" ]
+
+  deps = [
+    ":bundle",
+    "../../../../testing",
+  ]
+}
