--- a/front_end/panels/linear_memory_inspector/components/BUILD.gn
+++ b/front_end/panels/linear_memory_inspector/components/BUILD.gn
@@ -59,6 +59,7 @@ devtools_entrypoint("bundle") {
     ":*",
     "../:*",
     "../../../ui/components/docs/linear_memory_inspector/*",
+    "../../../ui/legacy/components/source_frame/*",
     "../../network:*",
   ]
 
