[GM3Restyling] Extend cards to allow for icon and a heading suffix
Some cards in the Settings page require an icon preceding the heading,
and an HTMLElement after the heading. This extends the card settings
to allow for these two.

Drive-by: Change heading to accept strings only, since in some
cases we don't have a translation (path in settings pages).

Bug: 368238837
Change-Id: I7a8d629f08088f3588cfcbf42f2ab397ba46f9c4
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5972704
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/ui/components/cards/BUILD.gn
+++ b/front_end/ui/components/cards/BUILD.gn
@@ -18,6 +18,7 @@ devtools_module("card") {
   deps = [
     "../../../core/common:bundle",
     "../../../ui/lit-html:bundle",
+    "../icon_button:bundle",
   ]
 }
 
