[Animations] Use `animation` icon for the animation link swatch
Drive-by:
* Add `title` to the icon

Bug: 349566091
Change-Id: Ic21b475cf512c4ddb910a2408f6eb6ffd9d9a3f7
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5973206
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Auto-Submit: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Changhao Han <changhaohan@chromium.org>

--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -43,6 +43,7 @@ devtools_svg_sources = [
   "align-self-end.svg",
   "align-self-start.svg",
   "align-self-stretch.svg",
+  "animation.svg",
   "arrow-back.svg",
   "arrow-down.svg",
   "arrow-drop-down-dark.svg",
