--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -36,6 +36,7 @@ grd_files_release_sources = [
   "front_end/Images/align-self-end.svg",
   "front_end/Images/align-self-start.svg",
   "front_end/Images/align-self-stretch.svg",
+  "front_end/Images/animation.svg",
   "front_end/Images/arrow-back.svg",
   "front_end/Images/arrow-down.svg",
   "front_end/Images/arrow-drop-down-dark.svg",
