[Freestyler] Add history entry point
This adds the button and ability to navigate different conversations.
The history is kept in memory for now.

Bug: 351752761
Change-Id: I6585295e149fb12880b116b94312c0cd4a2e11d5
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5973696
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -150,6 +150,7 @@ grd_files_release_sources = [
   "front_end/Images/heap-snapshot.svg",
   "front_end/Images/heap-snapshots.svg",
   "front_end/Images/help.svg",
+  "front_end/Images/history.svg",
   "front_end/Images/home.svg",
   "front_end/Images/hover.svg",
   "front_end/Images/iframe-crossed.svg",
