--- a/config/gni/devtools_image_files.gni
+++ b/config/gni/devtools_image_files.gni
@@ -153,6 +153,7 @@ devtools_svg_sources = [
   "heap-snapshot.svg",
   "heap-snapshots.svg",
   "help.svg",
+  "history.svg",
   "home.svg",
   "hover.svg",
   "iframe-crossed.svg",
