--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "author": "The Chromium Authors",
-  "bugs": {
-    "url": "https://bugs.chromium.org/p/chromium/issues/list?can=2&q=component:Platform%3EDevTools%20&sort=-opened&colspec=ID%20Stars%20Owner%20Summary%20Modified%20Opened"
-  },
+  "bugs": "https://issues.chromium.org/issues?q=status:open componentid:1457055+",
   "description": "Chrome DevTools UI",
   "homepage": "https://devtools.chrome.com",
   "keywords": [
