Allow NamedBitSetFilterUI instantiation from lit-html template
Similar to the split widget changes: https://crrev.com/c/5898679

Bug: 301364727
Change-Id: I68e8972170333d7fdb731fe22676f0996b58e024
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5979110
Reviewed-by: Philip Pfaffe <pfaffe@chromium.org>
Commit-Queue: Joshua Thomas <masnoble@chromium.org>
Reviewed-by: Shuran Huang <shuuran@chromium.org>

--- a/front_end/ui/legacy/BUILD.gn
+++ b/front_end/ui/legacy/BUILD.gn
@@ -196,6 +196,7 @@ ts_library("unittests") {
     "Context.test.ts",
     "ContextMenu.test.ts",
     "DockController.test.ts",
+    "FilterBar.test.ts",
     "Fragment.test.ts",
     "Geometry.test.ts",
     "Infobar.test.ts",
