[GM3Restyling] Update workspace settings page
Before: https://i.imgur.com/M7vIlO6.png
After: https://i.imgur.com/ywKVbZ4.png
Bug: 368238837
Change-Id: I793c6cfe0f62d8bcbe932ecdaf860fb39177ffbe
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5973211
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/models/persistence/BUILD.gn
+++ b/front_end/models/persistence/BUILD.gn
@@ -41,6 +41,7 @@ devtools_module("persistence") {
     "../../models/breakpoints:bundle",
     "../../models/text_utils:bundle",
     "../../models/workspace:bundle",
+    "../../ui/components/cards:bundle",
     "../../ui/legacy:bundle",
     "../../ui/legacy/components/utils:bundle",
   ]
