--- a/front_end/ui/components/cards/BUILD.gn
+++ b/front_end/ui/components/cards/BUILD.gn
@@ -30,7 +30,9 @@ devtools_entrypoint("bundle") {
     ":css_files",
   ]
 
-  visibility = default_components_visibility
+  visibility = [ "../../../models/persistence/*" ]
+
+  visibility += default_components_visibility
 }
 
 ts_library("unittests") {
