[visual_logging] Only emit 'unknown VE context' errors for debug builds.
These error messages are not actionable for extension developers, but
only for DevTools engineers themselves, and there's no point to bother
externals with these messages.

Fixed: 369319572
Bug: 357571602
Change-Id: I4a36b1e7ec0afe4e6079af5ab4a90f01659f6277
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5987812
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Commit-Queue: Danil Somsikov <dsv@chromium.org>

--- a/front_end/ui/visual_logging/BUILD.gn
+++ b/front_end/ui/visual_logging/BUILD.gn
@@ -21,6 +21,7 @@ devtools_module("visual_logging") {
   deps = [
     "../../core/common:bundle",
     "../../core/host:bundle",
+    "../../core/root:bundle",
     "../components/render_coordinator:bundle",
   ]
 }
