--- a/front_end/panels/mobile_throttling/BUILD.gn
+++ b/front_end/panels/mobile_throttling/BUILD.gn
@@ -27,6 +27,7 @@ devtools_module("mobile_throttling") {
     "../../core/host:bundle",
     "../../core/i18n:bundle",
     "../../core/sdk:bundle",
+    "../../ui/components/cards:bundle",
     "../../ui/components/icon_button:bundle",
     "../../ui/legacy:bundle",
     "../../ui/visual_logging:bundle",
