--- a/front_end/panels/sensors/BUILD.gn
+++ b/front_end/panels/sensors/BUILD.gn
@@ -26,6 +26,8 @@ devtools_module("sensors") {
     "../../core/i18n:bundle",
     "../../core/sdk:bundle",
     "../../panels/mobile_throttling:bundle",
+    "../../ui/components/buttons:bundle",
+    "../../ui/components/cards:bundle",
     "../../ui/legacy:bundle",
   ]
 }
