RPP: Move TimelineProfileTree and ModelFilter into trace engine
They fit right in as models. This also allows trace engine to easily use the ProfileTree, and enables us to start resolving our multiple tree building implementations.

Change-Id: I51299e6e9d5bed511bf3c86465a766f8242fac4e
Bug: none
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5990176
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Reviewed-by: Jack Franklin <jacktfranklin@chromium.org>
Auto-Submit: Paul Irish <paulirish@chromium.org>

--- a/front_end/models/trace/BUILD.gn
+++ b/front_end/models/trace/BUILD.gn
@@ -19,6 +19,8 @@ devtools_module("trace") {
     "../../core/common:bundle",
     "../../core/platform:bundle",
     "../../core/sdk:bundle",
+    "../../generated:protocol",
+    "../cpu_profile:bundle",
     "extras:bundle",
     "handlers:bundle",
     "helpers:bundle",
