--- a/front_end/models/timeline_model/BUILD.gn
+++ b/front_end/models/timeline_model/BUILD.gn
@@ -8,22 +8,13 @@ import("../../../scripts/build/typescript/typescript.gni")
 import("../visibility.gni")
 
 devtools_module("timeline_model") {
-  sources = [
-    "TimelineJSProfile.ts",
-    "TimelineModelFilter.ts",
-    "TimelineProfileTree.ts",
-    "TracingLayerTree.ts",
-  ]
+  sources = [ "TracingLayerTree.ts" ]
 
   deps = [
     "../../core/common:bundle",
-    "../../core/i18n:bundle",
-    "../../core/platform:bundle",
-    "../../core/root:bundle",
     "../../core/sdk:bundle",
     "../../generated:protocol",
     "../../models/trace:bundle",
-    "../cpu_profile:bundle",
   ]
 }
 
@@ -41,19 +32,4 @@ devtools_entrypoint("bundle") {
   ]
 
   visibility += devtools_models_visibility
-}
-
-ts_library("unittests") {
-  testonly = true
-
-  sources = [
-    "TimelineModelFilter.test.ts",
-    "TimelineProfileTree.test.ts",
-  ]
-
-  deps = [
-    ":bundle",
-    "../../testing",
-    "../trace:bundle",
-  ]
 }
