[RPP] Rename insights to match model/component separation
Also renamed a couple insight models to match their component name.

Bug: 371615739
Change-Id: I0776c4ed7cc1c37b9bd10695795b19c430d09317
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5991675
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Auto-Submit: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Adam Raine <asraine@chromium.org>

--- a/front_end/models/trace/insights/BUILD.gn
+++ b/front_end/models/trace/insights/BUILD.gn
@@ -8,16 +8,16 @@ import("../../visibility.gni")
 
 devtools_module("insights") {
   sources = [
+    "CLSCulprits.ts",
     "Common.ts",
-    "CumulativeLayoutShift.ts",
     "DocumentLatency.ts",
     "FontDisplay.ts",
-    "InsightRunners.ts",
     "InteractionToNextPaint.ts",
     "LargestContentfulPaint.ts",
+    "Models.ts",
     "RenderBlocking.ts",
     "SlowCSSSelector.ts",
-    "ThirdPartyWeb.ts",
+    "ThirdParties.ts",
     "Viewport.ts",
     "types.ts",
   ]
@@ -45,14 +45,14 @@ ts_library("unittests") {
   testonly = true
 
   sources = [
-    "CumulativeLayoutShift.test.ts",
+    "CLSCulprits.test.ts",
     "DocumentLatency.test.ts",
     "FontDisplay.test.ts",
     "InteractionToNextPaint.test.ts",
     "LargestContentfulPaint.test.ts",
     "RenderBlocking.test.ts",
     "SlowCSSSelector.test.ts",
-    "ThirdPartyWeb.test.ts",
+    "ThirdParties.test.ts",
     "Viewport.test.ts",
   ]
 
