[RPP] Split LargestContentfulPaint insight model in two
Split into LCPPhases and LCPDiscovery, to match the two insight
components. Also moves finding the LCP request for a navigation from
insights/Common.ts to instead be in LargestImagePaintHandler.ts

Bug: 371615739
Change-Id: I8f232094e48339c6b5add5b9ec9f5eb6c6b5b61b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5996120
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Adam Raine <asraine@chromium.org>
Auto-Submit: Connor Clark <cjamcl@chromium.org>

--- a/front_end/models/trace/insights/BUILD.gn
+++ b/front_end/models/trace/insights/BUILD.gn
@@ -13,7 +13,8 @@ devtools_module("insights") {
     "DocumentLatency.ts",
     "FontDisplay.ts",
     "InteractionToNextPaint.ts",
-    "LargestContentfulPaint.ts",
+    "LCPDiscovery.ts",
+    "LCPPhases.ts",
     "Models.ts",
     "RenderBlocking.ts",
     "SlowCSSSelector.ts",
@@ -49,7 +50,8 @@ ts_library("unittests") {
     "DocumentLatency.test.ts",
     "FontDisplay.test.ts",
     "InteractionToNextPaint.test.ts",
-    "LargestContentfulPaint.test.ts",
+    "LCPDiscovery.test.ts",
+    "LCPPhases.test.ts",
     "RenderBlocking.test.ts",
     "SlowCSSSelector.test.ts",
     "ThirdParties.test.ts",
