Update BUILD.gn files to use settingsScreen.css styles
Bug: 368238837
No-Tree-Checks: true
Change-Id: I668314878723845dbac6ffe992fe9953f0049a5b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5998031
Commit-Queue: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Kateryna Prokopenko <kprokopenko@chromium.org>

--- a/front_end/panels/mobile_throttling/BUILD.gn
+++ b/front_end/panels/mobile_throttling/BUILD.gn
@@ -31,6 +31,7 @@ devtools_module("mobile_throttling") {
     "../../ui/components/icon_button:bundle",
     "../../ui/legacy:bundle",
     "../../ui/visual_logging:bundle",
+    "../settings:bundle",
   ]
 }
 
