[Freestyler] Update no agent empty state design
Screenshot: https://g-issues.chromium.org/action/issues/40248266/attachments/60631650?download=false

Bug: 376431804
Change-Id: If3cdd2d99abad29dad48e1d1df7e74b21de3db58
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5999713
Reviewed-by: Nikolay Vitkov <nvitkov@chromium.org>
Commit-Queue: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -55,6 +55,7 @@ grd_files_release_sources = [
   "front_end/Images/breakpoint-circle.svg",
   "front_end/Images/breakpoint-crossed-filled.svg",
   "front_end/Images/breakpoint-crossed.svg",
+  "front_end/Images/brush-2.svg",
   "front_end/Images/brush-filled.svg",
   "front_end/Images/brush.svg",
   "front_end/Images/bug.svg",
