Update handling of dual pseudo-state checkboxes
Some pseudo-states come in dual pairs (e.g. :valid and :invalid). For
the force state checkboxes, in cases where we can determine from the
DOM attributes which state it should be in, we only make the dual
checkbox visible (e.g. an input with the "required" attribute only has
an :optional checkbox.) For the other pairs, both checkboxes are shown,
but checking one will uncheck the other one.

Bug: 371926664
Change-Id: Ia86e69458b32826b41dbcdc372f0820107a60628
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5994390
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Commit-Queue: Eric Leese <leese@chromium.org>

--- a/test/e2e/resources/elements/BUILD.gn
+++ b/test/e2e/resources/elements/BUILD.gn
@@ -61,6 +61,7 @@ copy_to_gen("elements") {
     "simple-body-color.html",
     "simple-styled-page.html",
     "slot-element.html",
+    "specific-pseudo-states.html",
     "style-pane-properties.html",
     "styles-disable-inherited.html",
     "stylesheets-with-various-sources.html",
