--- a/front_end/panels/freestyler/BUILD.gn
+++ b/front_end/panels/freestyler/BUILD.gn
@@ -41,7 +41,10 @@ devtools_module("freestyler") {
     "../../models/logs:bundle",
     "../../models/trace:bundle",
     "../../models/workspace:bundle",
+    "../../panels/elements:bundle",
     "../../panels/network:bundle",
+    "../../panels/sources:bundle",
+    "../../panels/timeline:bundle",
     "../../panels/timeline/utils:bundle",
     "../../panels/utils:bundle",
     "../../third_party/marked:bundle",
