--- a/front_end/panels/sources/BUILD.gn
+++ b/front_end/panels/sources/BUILD.gn
@@ -110,6 +110,7 @@ devtools_entrypoint("bundle") {
     ":*",
     "../../entrypoints/*",
     "../../panels/explain/*",
+    "../../panels/freestyler/*",
     "../../panels/network/*",
     "../browser_debugger/*",
   ]
