--- a/front_end/panels/timeline/BUILD.gn
+++ b/front_end/panels/timeline/BUILD.gn
@@ -151,6 +151,7 @@ devtools_entrypoint("bundle") {
     "../../../test/perf/*",
     "../../entrypoints/*",
     "../../models/trace/handlers:unittests",
+    "../../panels/freestyler/*",
     "../../testing",
     "../../testing/*",
     "../../ui/components/docs/performance_panel/*",
