--- a/front_end/panels/security/BUILD.gn
+++ b/front_end/panels/security/BUILD.gn
@@ -10,6 +10,7 @@ import("../visibility.gni")
 
 generate_css("css_files") {
   sources = [
+    "cookieReportView.css",
     "lockIcon.css",
     "mainView.css",
     "originView.css",
@@ -20,6 +21,7 @@ generate_css("css_files") {
 devtools_module("security") {
   sources = [
     "CookieReportTreeElement.ts",
+    "CookieReportView.ts",
     "OriginTreeElement.ts",
     "SecurityModel.ts",
     "SecurityPanel.ts",
