Use Intl.NumberFormat for time and byte formatting
TimeUtilities now uses Intl.NumberFormat (instead of UIStrings),
and bytesToString now uses Intl.NumberFormat (instead of non-locale
aware strings). Additionally, bytesToString is now under the i18n
module.

Impacts of this change:

* use Chrome ICU locale data to format, rather than human translators,
  which allows us to be more accurate in regards to unit display style
  (narrow vs short vs long)
* group separators (ex: thousands decimals in english) are now present
* slight change to rounding behavior - Intl.NumberFormat defaults to
  "halfExpand", which rounds away from zeroes to break ties. Previously
  we just truncated

See go/cpq:i18n-units-design

Bug: 372723536
Change-Id: Iff05ca9ff01213660d64ca88fadb613296153fa9
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5981156
Reviewed-by: Simon Zünd <szuend@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>
Reviewed-by: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Paul Irish <paulirish@chromium.org>

--- a/front_end/core/i18n/BUILD.gn
+++ b/front_end/core/i18n/BUILD.gn
@@ -12,7 +12,9 @@ import("//$devtools_root_location/config/gni/i18n.gni")
 
 devtools_module("i18n") {
   sources = [
+    "ByteUtilities.ts",
     "DevToolsLocale.ts",
+    "NumberFormatter.ts",
     "i18nImpl.ts",
     "i18nTypes.ts",
     "time-utilities.ts",
@@ -85,6 +87,7 @@ ts_library("unittests") {
   testonly = true
 
   sources = [
+    "ByteUtilities.test.ts",
     "DevToolsLocale.test.ts",
     "i18n.test.ts",
     "time-utilities.test.ts",
