--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -779,7 +779,9 @@ grd_files_debug_sources = [
   "front_end/core/host/Platform.js",
   "front_end/core/host/ResourceLoader.js",
   "front_end/core/host/UserMetrics.js",
+  "front_end/core/i18n/ByteUtilities.js",
   "front_end/core/i18n/DevToolsLocale.js",
+  "front_end/core/i18n/NumberFormatter.js",
   "front_end/core/i18n/i18nImpl.js",
   "front_end/core/i18n/i18nTypes.js",
   "front_end/core/i18n/locales.js",
