Add DevTools frontend support for port and scheme mismatch issues
Implements DevTools frontend support to show an issue for when
either a port or scheme are mismatched. This issue will only be
shown when kEnableSchemeBoundCookies or kEnablePortBoundCookies
are enabled.

Bug: 376025587
Change-Id: Iece976380330ab398a7e3d8b822a52317a90b010
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5988430
Reviewed-by: Alina Varkki <alinavarkki@chromium.org>
Commit-Queue: Amarjot Gill <amarjotgill@chromium.org>
Reviewed-by: Wolfgang Beyer <wolfi@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -413,6 +413,8 @@ grd_files_release_sources = [
   "front_end/models/issues_manager/descriptions/cookieCrossSiteRedirectDowngrade.md",
   "front_end/models/issues_manager/descriptions/cookieExcludeBlockedWithinRelatedWebsiteSet.md",
   "front_end/models/issues_manager/descriptions/cookieExcludeDomainNonAscii.md",
+  "front_end/models/issues_manager/descriptions/cookieExcludePortMismatch.md",
+  "front_end/models/issues_manager/descriptions/cookieExcludeSchemeMismatch.md",
   "front_end/models/issues_manager/descriptions/cookieExcludeThirdPartyPhaseoutRead.md",
   "front_end/models/issues_manager/descriptions/cookieExcludeThirdPartyPhaseoutSet.md",
   "front_end/models/issues_manager/descriptions/cookieWarnDomainNonAscii.md",
