Do not pass file urls to language plugins
Unless the owning extension has filesystem access enabled.

Bug: none
Change-Id: I3d71f635974cc348d3741fd8335cdf63fbc7fec0
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5999725
Commit-Queue: Philip Pfaffe <pfaffe@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>

--- a/front_end/models/extensions/BUILD.gn
+++ b/front_end/models/extensions/BUILD.gn
@@ -64,6 +64,7 @@ ts_library("unittests") {
   sources = [
     "ExtensionServer.test.ts",
     "HostUrlPattern.test.ts",
+    "LanguageExtensionEndpoint.test.ts",
     "RecorderPluginManager.test.ts",
   ]
 
