[RPP] Combine BaseInsight, SidebarInsight into new BaseInsightComponent
Bug: 371615739
Change-Id: Ic93a19fcab76c5f2ff3c3d9a7682dd62f2db0e76
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6021015
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Paul Irish <paulirish@chromium.org>
Auto-Submit: Connor Clark <cjamcl@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1825,6 +1825,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/breadcrumbsUI.css.js",
   "front_end/panels/timeline/components/cpuThrottlingSelector.css.js",
   "front_end/panels/timeline/components/fieldSettingsDialog.css.js",
+  "front_end/panels/timeline/components/insights/BaseInsightComponent.js",
   "front_end/panels/timeline/components/insights/CLSCulprits.js",
   "front_end/panels/timeline/components/insights/DocumentLatency.js",
   "front_end/panels/timeline/components/insights/EventRef.js",
@@ -1840,7 +1841,7 @@ grd_files_debug_sources = [
   "front_end/panels/timeline/components/insights/Table.js",
   "front_end/panels/timeline/components/insights/ThirdParties.js",
   "front_end/panels/timeline/components/insights/Viewport.js",
-  "front_end/panels/timeline/components/insights/sidebarInsight.css.js",
+  "front_end/panels/timeline/components/insights/baseInsightComponent.css.js",
   "front_end/panels/timeline/components/insights/table.css.js",
   "front_end/panels/timeline/components/insights/types.js",
   "front_end/panels/timeline/components/interactionBreakdown.css.js",
