Add enterprise/domain icon
Example of usage in controls tool mock:
https://screenshot.googleplex.com/5GnJDiTN5gg8LR9.png

Change-Id: I6919aa6c34cbd1ff9f80a73831a1e1c4d342d328
Bug: 375352611
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6018704
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Shuran Huang <shuuran@chromium.org>
Commit-Queue: Joshua Thomas <masnoble@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -107,6 +107,7 @@ grd_files_release_sources = [
   "front_end/Images/dock-window.svg",
   "front_end/Images/document.svg",
   "front_end/Images/dog-paw.svg",
+  "front_end/Images/domain.svg",
   "front_end/Images/dots-horizontal.svg",
   "front_end/Images/dots-vertical.svg",
   "front_end/Images/download.svg",
