Add What's New Panel
Bug: 378646762
Change-Id: I2136a326b5b5881c6cc74360951bbd3e95365a85
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6010893
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Reviewed-by: Simon Zünd <szuend@chromium.org>
Commit-Queue: Liviu Rau <liviurau@chromium.org>

--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -651,6 +651,10 @@ grd_files_release_sources = [
   "front_end/panels/web_audio/web_audio.js",
   "front_end/panels/webauthn/webauthn-meta.js",
   "front_end/panels/webauthn/webauthn.js",
+  "front_end/panels/whats_new/resources/WNDT.md",
+  "front_end/panels/whats_new/resources/whatsnew.avif",
+  "front_end/panels/whats_new/whats_new-meta.js",
+  "front_end/panels/whats_new/whats_new.js",
   "front_end/rehydrated_devtools_app.html",
   "front_end/services/puppeteer/puppeteer.js",
   "front_end/services/trace_bounds/trace_bounds.js",
@@ -1897,6 +1901,10 @@ grd_files_debug_sources = [
   "front_end/panels/web_audio/webAudio.css.js",
   "front_end/panels/webauthn/WebauthnPane.js",
   "front_end/panels/webauthn/webauthnPane.css.js",
+  "front_end/panels/whats_new/ReleaseNoteText.js",
+  "front_end/panels/whats_new/ReleaseNoteView.js",
+  "front_end/panels/whats_new/WhatsNewImpl.js",
+  "front_end/panels/whats_new/releaseNoteView.css.js",
   "front_end/services/puppeteer/PuppeteerConnection.js",
   "front_end/services/trace_bounds/TraceBounds.js",
   "front_end/services/tracing/PerformanceTracing.js",
