Retrieve and show cookie report data
As relevant cookieIssues are reported by the issueManager, the
CookieReportView is notified and will gather the cookieReportInfo
from the cookieIssue. This report information is pulled from the
third-party-web.

https://screenshot.googleplex.com/9n4NAQnhu69niv2.png

Bug: 365737493
Change-Id: I86967ce6d76c4aa14c4c3de2192dc7638e7f5b2d
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5980008
Commit-Queue: Joshua Thomas <masnoble@chromium.org>
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Reviewed-by: Shuran Huang <shuuran@chromium.org>

--- a/front_end/models/issues_manager/BUILD.gn
+++ b/front_end/models/issues_manager/BUILD.gn
@@ -53,6 +53,7 @@ devtools_module("issues_manager") {
     "../../models/text_utils:bundle",
     "../../models/workspace:bundle",
     "../../third_party/marked:bundle",
+    "../../third_party/third-party-web:bundle",
   ]
 
   public_deps = [ ":descriptions" ]
@@ -231,6 +232,7 @@ devtools_entrypoint("bundle") {
     "../../panels/elements/*",
     "../../panels/issues/*",
     "../../panels/network/*",
+    "../../panels/security/*",
     "../../panels/sources/*",
     "../../testing/*",
     "../../ui/components/docs/issue_counter/*",
