--- a/front_end/ui/legacy/components/data_grid/BUILD.gn
+++ b/front_end/ui/legacy/components/data_grid/BUILD.gn
@@ -46,6 +46,7 @@ devtools_entrypoint("bundle") {
     "../../../../panels/media/*",
     "../../../../panels/network/*",
     "../../../../panels/profiler/*",
+    "../../../../panels/security/*",
     "../../../../panels/timeline/*",
     "../../../../panels/webauthn/*",
     "../cookie_table/*",
