[AI Assistance] Persistent history entries
Bug: 369303513
Change-Id: I1aadaa722f7ee4774a13b2c9db21e18376351b0b
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6021481
Reviewed-by: Alex Rudenko <alexrudenko@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/front_end/panels/freestyler/BUILD.gn
+++ b/front_end/panels/freestyler/BUILD.gn
@@ -19,6 +19,7 @@ generate_css("css_files") {
 devtools_module("freestyler") {
   sources = [
     "AiAgent.ts",
+    "AiHistoryStorage.ts",
     "ChangeManager.ts",
     "DrJonesFileAgent.ts",
     "DrJonesNetworkAgent.ts",
@@ -83,6 +84,7 @@ ts_library("unittests") {
 
   sources = [
     "AiAgent.test.ts",
+    "AiHistoryStorage.test.ts",
     "ChangeManager.test.ts",
     "DrJonesFileAgent.test.ts",
     "DrJonesNetworkAgent.test.ts",
