--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1407,6 +1407,7 @@ grd_files_debug_sources = [
   "front_end/panels/explain/components/consoleInsight.css.js",
   "front_end/panels/explain/components/consoleInsightSourcesList.css.js",
   "front_end/panels/freestyler/AiAgent.js",
+  "front_end/panels/freestyler/AiHistoryStorage.js",
   "front_end/panels/freestyler/ChangeManager.js",
   "front_end/panels/freestyler/DrJonesFileAgent.js",
   "front_end/panels/freestyler/DrJonesNetworkAgent.js",
