Fix Safari incompatibility with dt-checkbox
Change-Id: I7b4fe875b089b605028b1e585d2c83b7f1e25213
Bug: 379694205
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6028362
Commit-Queue: Simon Zünd <szuend@chromium.org>
Reviewed-by: Simon Zünd <szuend@chromium.org>
Auto-Submit: Paul Irish <paulirish@chromium.org>

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -16,7 +16,8 @@
       true,
       {
         "ignoreTypes": [
-          "/^devtools-/"
+          "/^devtools-/",
+          "/^dt-/"
         ]
       }
     ],
