[RPP] Image delivery insight model
See go/cpq:dom-size-insight for details. Estimated savings will be added
in a follow-up.

Bug: 372897377
Change-Id: Iafd0dd9564328dbdbf8f24388794160eb00c5ac0
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6026792
Commit-Queue: Adam Raine <asraine@chromium.org>
Reviewed-by: Adriana Ixba <aixba@chromium.org>
Reviewed-by: Connor Clark <cjamcl@chromium.org>

--- a/front_end/models/trace/insights/BUILD.gn
+++ b/front_end/models/trace/insights/BUILD.gn
@@ -12,6 +12,7 @@ devtools_module("insights") {
     "Common.ts",
     "DocumentLatency.ts",
     "FontDisplay.ts",
+    "ImageDelivery.ts",
     "InteractionToNextPaint.ts",
     "LCPDiscovery.ts",
     "LCPPhases.ts",
@@ -49,6 +50,7 @@ ts_library("unittests") {
     "CLSCulprits.test.ts",
     "DocumentLatency.test.ts",
     "FontDisplay.test.ts",
+    "ImageDelivery.test.ts",
     "InteractionToNextPaint.test.ts",
     "LCPDiscovery.test.ts",
     "LCPPhases.test.ts",
