--- a/front_end/panels/timeline/fixtures/traces/BUILD.gn
+++ b/front_end/panels/timeline/fixtures/traces/BUILD.gn
@@ -28,6 +28,7 @@ copy_to_gen("traces") {
     "idle-callback.json.gz",
     "idle-tasks.json.gz",
     "iframe-shift.json.gz",
+    "image-delivery.json.gz",
     "instant-animation-events.json.gz",
     "interactive-time.json.gz",
     "invalid-animation-events.json.gz",
