--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1089,6 +1089,7 @@ grd_files_debug_sources = [
   "front_end/models/trace/insights/Common.js",
   "front_end/models/trace/insights/DocumentLatency.js",
   "front_end/models/trace/insights/FontDisplay.js",
+  "front_end/models/trace/insights/ImageDelivery.js",
   "front_end/models/trace/insights/InteractionToNextPaint.js",
   "front_end/models/trace/insights/LCPDiscovery.js",
   "front_end/models/trace/insights/LCPPhases.js",
