Add Cookie Controls tool view
This tool is not yet functional. Work to come:
1) Show enterprise UI: https://crrev.com/c/6033409
2) Create and use a new CDP method to send controls to chromium
This work will come in future CLs

https://screenshot.googleplex.com/8ZcUUWhgWYKdzeN.png

Bug: 375352611
Change-Id: I2c3c32ca6dde959ac4a3397c61edf8ec4eaf07dc
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6026108
Reviewed-by: Danil Somsikov <dsv@chromium.org>
Reviewed-by: Kim-Anh Tran <kimanh@chromium.org>
Commit-Queue: Joshua Thomas <masnoble@chromium.org>

--- a/front_end/panels/security/BUILD.gn
+++ b/front_end/panels/security/BUILD.gn
@@ -10,6 +10,7 @@ import("../visibility.gni")
 
 generate_css("css_files") {
   sources = [
+    "cookieControlsView.css",
     "cookieReportView.css",
     "lockIcon.css",
     "mainView.css",
@@ -20,6 +21,8 @@ generate_css("css_files") {
 
 devtools_module("security") {
   sources = [
+    "CookieControlsTreeElement.ts",
+    "CookieControlsView.ts",
     "CookieReportTreeElement.ts",
     "CookieReportView.ts",
     "OriginTreeElement.ts",
@@ -37,6 +40,9 @@ devtools_module("security") {
     "../../generated:protocol",
     "../../models/issues_manager:bundle",
     "../../panels/network/forward:bundle",
+    "../../ui/components/buttons:bundle",
+    "../../ui/components/cards:bundle",
+    "../../ui/components/switch:bundle",
     "../../ui/legacy:bundle",
     "../../ui/legacy/components/data_grid:bundle",
   ]
@@ -74,6 +80,7 @@ ts_library("unittests") {
   testonly = true
 
   sources = [
+    "CookieControlsView.test.ts",
     "CookieReportView.test.ts",
     "SecurityModel.test.ts",
     "SecurityPanel.test.ts",
