--- a/config/gni/devtools_grd_files.gni
+++ b/config/gni/devtools_grd_files.gni
@@ -1682,6 +1682,8 @@ grd_files_debug_sources = [
   "front_end/panels/search/SearchView.js",
   "front_end/panels/search/searchResultsPane.css.js",
   "front_end/panels/search/searchView.css.js",
+  "front_end/panels/security/CookieControlsTreeElement.js",
+  "front_end/panels/security/CookieControlsView.js",
   "front_end/panels/security/CookieReportTreeElement.js",
   "front_end/panels/security/CookieReportView.js",
   "front_end/panels/security/OriginTreeElement.js",
@@ -1689,6 +1691,7 @@ grd_files_debug_sources = [
   "front_end/panels/security/SecurityPanel.js",
   "front_end/panels/security/SecurityPanelSidebar.js",
   "front_end/panels/security/SecurityPanelSidebarTreeElement.js",
+  "front_end/panels/security/cookieControlsView.css.js",
   "front_end/panels/security/cookieReportView.css.js",
   "front_end/panels/security/lockIcon.css.js",
   "front_end/panels/security/mainView.css.js",
