--- a/front_end/panels/timeline/components/insights/BUILD.gn
+++ b/front_end/panels/timeline/components/insights/BUILD.gn
@@ -22,6 +22,7 @@ devtools_module("insights") {
     "EventRef.ts",
     "FontDisplay.ts",
     "Helpers.ts",
+    "ImageDelivery.ts",
     "InteractionToNextPaint.ts",
     "LCPDiscovery.ts",
     "LCPPhases.ts",
